[gd_scene load_steps=16 format=3 uid="uid://cqc8xx5fqc343"]

[ext_resource type="Script" path="res://main.gd" id="1_ckmjf"]
[ext_resource type="Script" path="res://rotator.gd" id="1_eg7te"]
[ext_resource type="Theme" uid="uid://bsp421jrq0otr" path="res://ui.tres" id="3_rnfay"]
[ext_resource type="Script" path="res://DayUI.cs" id="4_iblm5"]

[sub_resource type="Gradient" id="Gradient_7banj"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_frjxb"]
noise_type = 2
frequency = 0.0947
cellular_return_type = 0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_70bm5"]
color_ramp = SubResource("Gradient_7banj")
noise = SubResource("FastNoiseLite_frjxb")

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_kkl7y"]
panorama = SubResource("NoiseTexture2D_70bm5")

[sub_resource type="Sky" id="Sky_afq0i"]
sky_material = SubResource("PanoramaSkyMaterial_kkl7y")

[sub_resource type="Environment" id="Environment_mx5yl"]
background_mode = 1
background_color = Color(0.356863, 0.419608, 0.345098, 1)
sky = SubResource("Sky_afq0i")
ambient_light_color = Color(0.701961, 0.235294, 0.490196, 1)
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_glqp3"]
metallic = 0.37
metallic_specular = 0.21
roughness = 0.3

[sub_resource type="BoxMesh" id="BoxMesh_kisac"]
material = SubResource("StandardMaterial3D_glqp3")

[sub_resource type="SystemFont" id="SystemFont_pwrut"]

[sub_resource type="LabelSettings" id="LabelSettings_f3ghw"]
font = SubResource("SystemFont_pwrut")
font_size = 110
font_color = Color(0.517647, 0.584314, 0.690196, 1)
outline_size = 20
outline_color = Color(0, 0, 0, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 0.490196)
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4v5r4"]
bg_color = Color(0, 0, 0, 0.156863)
corner_radius_top_left = 70
corner_radius_top_right = 70
corner_radius_bottom_right = 70
corner_radius_bottom_left = 70

[node name="Node3D" type="Node3D"]
script = ExtResource("1_ckmjf")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_mx5yl")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.968148, 0.25038, 0, -0.25038, 0.968148, 0, 1.505, 3.638)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_kisac")
script = ExtResource("1_eg7te")
speed = Vector3(59.315, 23.525, -33.52)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CanvasGroup" type="CanvasGroup" parent="CanvasLayer"]

[node name="MainMenu" type="Control" parent="CanvasLayer/CanvasGroup"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_rnfay")

[node name="Label" type="Label" parent="CanvasLayer/CanvasGroup/MainMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 31.345
offset_bottom = 182.345
grow_horizontal = 2
text = "Advent of Code 2023"
label_settings = SubResource("LabelSettings_f3ghw")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/CanvasGroup/MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -625.0
offset_top = -142.5
offset_right = 625.0
offset_bottom = 142.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 65
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 65
theme_override_constants/margin_bottom = 50

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/CanvasGroup/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 110
theme_override_constants/v_separation = 35
columns = 5

[node name="Button1" type="Button" parent="CanvasLayer/CanvasGroup/MainMenu/MarginContainer/GridContainer"]
layout_mode = 2
text = "Day 1"

[node name="Button2" type="Button" parent="CanvasLayer/CanvasGroup/MainMenu/MarginContainer/GridContainer"]
layout_mode = 2
text = "Day 2"

[node name="Button3" type="Button" parent="CanvasLayer/CanvasGroup/MainMenu/MarginContainer/GridContainer"]
layout_mode = 2
text = "Day 3"

[node name="Button4" type="Button" parent="CanvasLayer/CanvasGroup/MainMenu/MarginContainer/GridContainer"]
layout_mode = 2
text = "Day 4"

[node name="Button5" type="Button" parent="CanvasLayer/CanvasGroup/MainMenu/MarginContainer/GridContainer"]
layout_mode = 2
text = "Day 5"

[node name="Button6" type="Button" parent="CanvasLayer/CanvasGroup/MainMenu/MarginContainer/GridContainer"]
layout_mode = 2
text = "Day 6"

[node name="DayUI" type="Control" parent="CanvasLayer/CanvasGroup" node_paths=PackedStringArray("_labelR1", "_labelR2")]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_rnfay")
script = ExtResource("4_iblm5")
_labelR1 = NodePath("Panel/r1")
_labelR2 = NodePath("Panel/r2")

[node name="Panel" type="Panel" parent="CanvasLayer/CanvasGroup/DayUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4v5r4")

[node name="Button" type="Button" parent="CanvasLayer/CanvasGroup/DayUI/Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 22.0
offset_top = -100.0
offset_right = 141.0
offset_bottom = -25.0
grow_vertical = 0
text = "Back"

[node name="r1" type="Label" parent="CanvasLayer/CanvasGroup/DayUI/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 83.0
offset_top = 50.0
offset_right = 256.0
offset_bottom = 117.0
mouse_filter = 1
text = "result 1"

[node name="r2" type="Label" parent="CanvasLayer/CanvasGroup/DayUI/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 332.0
offset_top = 50.0
offset_right = 512.0
offset_bottom = 117.0
mouse_filter = 1
text = "result 2"

[connection signal="pressed" from="CanvasLayer/CanvasGroup/MainMenu/MarginContainer/GridContainer/Button1" to="." method="go_to_day" binds= [0]]
[connection signal="pressed" from="CanvasLayer/CanvasGroup/MainMenu/MarginContainer/GridContainer/Button2" to="." method="go_to_day" binds= [1]]
[connection signal="pressed" from="CanvasLayer/CanvasGroup/DayUI/Panel/Button" to="." method="go_to_main"]
